--- a/index.html
+++ b/index.html
@@ -3,9 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nathan DeSpain</title>
+    <link href="style\index.css" rel="stylesheet" type="text/css" media="screen"/>
 </head>
 <body>
-    
+    <header>
+        <h1>Nathan Despain</h1>
+        <nav>
+            <a href="C:\Users\Nathan\Documents\Lambda\User-Interface-II\index.html">Home</a>
+            <a href="C:\Users\Nathan\Documents\Lambda\User-Interface-II\about.html">About</a>
+            <a href="C:\Users\Nathan\Documents\Lambda\User-Interface-II\contact.html">Contact</a>
+            <a href="C:\Users\Nathan\Documents\Lambda\User-Interface-II\projects.html">Projects</a>
+        </nav>
+    </header>
+    <section class="section1">
+        <img>
+        <div>
+            <h2>Nathan DeSpain</h2>
+            <a>My Projects</a>
+            <p>Here are some words about me and my journey in coding
+                so far. These words are authentic and inspiring. These
+                words tell my story.</p>
+        </div>
+    </section>
+    <section class="gallery">
+        <div><img></div>
+        <div><img></div>
+        <div><img></div>
+        <div><img></div>
+        <div><img></div>
+        <div><img></div>
+        <div><img></div>
+        <div><img></div>
+    </section>
+    <footer>
+        <div>
+            <h2>Like what you see?</h2>
+            <a href="C:\Users\Nathan\Documents\Lambda\User-Interface-II\contact.html">Contact Me</a>
+        </div>
+    </footer>
 </body>
 </html>
