--- a/index.html
+++ b/index.html
@@ -10,31 +10,31 @@
     <header>
         <h1>Nathan Despain</h1>
         <nav>
-            <a href="C:\Users\Nathan\Documents\Lambda\User-Interface-II\index.html">Home</a>
+            <a class="currentPage" href="C:\Users\Nathan\Documents\Lambda\User-Interface-II\index.html">Home</a>
             <a href="C:\Users\Nathan\Documents\Lambda\User-Interface-II\about.html">About</a>
             <a href="C:\Users\Nathan\Documents\Lambda\User-Interface-II\contact.html">Contact</a>
             <a href="C:\Users\Nathan\Documents\Lambda\User-Interface-II\projects.html">Projects</a>
         </nav>
     </header>
     <section class="section1">
-        <img>
+        <img src="Photos\clement-h-95YRwf6CNw8-unsplash.jpg">
         <div>
             <h2>Nathan DeSpain</h2>
-            <a>My Projects</a>
+            <a href="C:\Users\Nathan\Documents\Lambda\User-Interface-II\projects.html">My Projects</a>
             <p>Here are some words about me and my journey in coding
                 so far. These words are authentic and inspiring. These
                 words tell my story.</p>
         </div>
     </section>
     <section class="gallery">
-        <div><img></div>
-        <div><img></div>
-        <div><img></div>
-        <div><img></div>
-        <div><img></div>
-        <div><img></div>
-        <div><img></div>
-        <div><img></div>
+        <div><img src="Photos\annie-spratt-nWiS2rgtVts-unsplash.jpg"></div>
+        <div><img src="Photos\brennan-ehrhardt-HALe2SmkWAI-unsplash.jpg"></div>
+        <div><img src="Photos\hope-house-press-leather-diary-studio-IOzk8YKDhYg-unsplash.jpg"></div>
+        <div><img src="Photos\nasa-rTZW4f02zY8-unsplash.jpg"></div>
+        <div><img src="Photos\rowan-heuvel-e-S-Pe2EmrE-unsplash.jpg"></div>
+        <div><img src="Photos\nasa-Yj1M5riCKk4-unsplash.jpg"></div>
+        <div><img src="Photos\ryan-wilson-YdpDztAnW9w-unsplash.jpg"></div>
+        <div><img src="Photos\sharon-pittaway-iMdsjoiftZo-unsplash.jpg"></div>
     </section>
     <footer>
         <div>
