--- a/index.html
+++ b/index.html
@@ -27,14 +27,38 @@
         </div>
     </section>
     <section class="gallery">
-        <div><img src="Photos\annie-spratt-nWiS2rgtVts-unsplash.jpg"></div>
-        <div><img src="Photos\brennan-ehrhardt-HALe2SmkWAI-unsplash.jpg"></div>
-        <div><img src="Photos\hope-house-press-leather-diary-studio-IOzk8YKDhYg-unsplash.jpg"></div>
-        <div><img src="Photos\nasa-rTZW4f02zY8-unsplash.jpg"></div>
-        <div><img src="Photos\rowan-heuvel-e-S-Pe2EmrE-unsplash.jpg"></div>
-        <div><img src="Photos\nasa-Yj1M5riCKk4-unsplash.jpg"></div>
-        <div><img src="Photos\ryan-wilson-YdpDztAnW9w-unsplash.jpg"></div>
-        <div><img src="Photos\sharon-pittaway-iMdsjoiftZo-unsplash.jpg"></div>
+        <div>
+            <img src="Photos\annie-spratt-nWiS2rgtVts-unsplash.jpg">
+            <a>title of a</a>
+        </div>
+        <div>
+            <img src="Photos\brennan-ehrhardt-HALe2SmkWAI-unsplash.jpg">
+            <a>project</a>
+        </div>
+        <div>
+            <img src="Photos\hope-house-press-leather-diary-studio-IOzk8YKDhYg-unsplash.jpg">
+            <a>might go</a>
+        </div>
+        <div>
+            <img src="Photos\nasa-rTZW4f02zY8-unsplash.jpg">
+            <a>right here</a>
+        </div>
+        <div>
+            <img src="Photos\rowan-heuvel-e-S-Pe2EmrE-unsplash.jpg">
+            <a>cool thing</a>
+        </div>
+        <div>
+            <img src="Photos\nasa-Yj1M5riCKk4-unsplash.jpg">
+            <a>fun thing</a>
+        </div>
+        <div>
+            <img src="Photos\ryan-wilson-YdpDztAnW9w-unsplash.jpg">
+            <a>spicy thing</a>
+        </div>
+        <div>
+            <img src="Photos\sharon-pittaway-iMdsjoiftZo-unsplash.jpg">
+            <a>special thing</a>
+        </div>
     </section>
     <footer>
         <div>
