--- a/index.html
+++ b/index.html
@@ -61,10 +61,12 @@
         </div>
     </section>
     <footer>
-        <div>
-            <h2>Like what you see?</h2>
+        <h2>Like what you see?</h2>
+        <nav>
+            <a href="https://www.twitter.com/">Twitter</a>
             <a href="C:\Users\Nathan\Documents\Lambda\User-Interface-II\contact.html">Contact Me</a>
-        </div>
+            <a href="https://www.linkedin.com/">Linkedin</a>
+        </nav>
     </footer>
 </body>
 </html>
