New tag for weird images

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </section>
     <section class="gallery">
         <div>
-            <img src="Photos\annie-spratt-nWiS2rgtVts-unsplash.jpg">
+            <img class="weird" src="Photos\annie-spratt-nWiS2rgtVts-unsplash.jpg">
             <a>title of a</a>
         </div>
         <div>
@@ -40,11 +40,11 @@
             <a>might go</a>
         </div>
         <div>
-            <img src="Photos\nasa-rTZW4f02zY8-unsplash.jpg">
+            <img src="Photos\rowan-heuvel-e-S-Pe2EmrE-unsplash.jpg">
             <a>right here</a>
         </div>
         <div>
-            <img src="Photos\rowan-heuvel-e-S-Pe2EmrE-unsplash.jpg">
+            <img class="weird" src="Photos\nasa-rTZW4f02zY8-unsplash.jpg">
             <a>cool thing</a>
         </div>
         <div>
