--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </nav>
     </header>
     <section class="section1">
-        <img src="Photos\clement-h-95YRwf6CNw8-unsplash.jpg">
+        <img alt="Laptop with code" src="Photos\clement-h-95YRwf6CNw8-unsplash.jpg">
         <div>
             <h2>Nathan DeSpain</h2>
             <a href="C:\Users\Nathan\Documents\Lambda\User-Interface-II\projects.html">My Projects</a>
@@ -28,35 +28,35 @@
     </section>
     <section class="gallery">
         <div>
-            <img class="weird" src="Photos\annie-spratt-nWiS2rgtVts-unsplash.jpg">
+            <img alt="Fluffy pink and blue clouds" src="Photos\annie-spratt-nWiS2rgtVts-unsplash.jpg">
             <a>title of a</a>
         </div>
         <div>
-            <img src="Photos\brennan-ehrhardt-HALe2SmkWAI-unsplash.jpg">
+            <img alt="Brick city home with a bicycle" src="Photos\brennan-ehrhardt-HALe2SmkWAI-unsplash.jpg">
             <a>project</a>
         </div>
         <div>
-            <img src="Photos\hope-house-press-leather-diary-studio-IOzk8YKDhYg-unsplash.jpg">
+            <img alt="stack of books" src="Photos\hope-house-press-leather-diary-studio-IOzk8YKDhYg-unsplash.jpg">
             <a>might go</a>
         </div>
         <div>
-            <img src="Photos\rowan-heuvel-e-S-Pe2EmrE-unsplash.jpg">
+            <img alt="blue sky with birds"src="Photos\rowan-heuvel-e-S-Pe2EmrE-unsplash.jpg">
             <a>right here</a>
         </div>
         <div>
-            <img class="weird" src="Photos\nasa-rTZW4f02zY8-unsplash.jpg">
+            <img alt="blue orange and black nebula" src="Photos\nasa-rTZW4f02zY8-unsplash.jpg">
             <a>cool thing</a>
         </div>
         <div>
-            <img src="Photos\nasa-Yj1M5riCKk4-unsplash.jpg">
+            <img alt="astronaut untethered from ISS floating above earth" src="Photos\nasa-Yj1M5riCKk4-unsplash.jpg">
             <a>fun thing</a>
         </div>
         <div>
-            <img src="Photos\ryan-wilson-YdpDztAnW9w-unsplash.jpg">
+            <img alt="picture of a pool of clear water in the sun" src="Photos\ryan-wilson-YdpDztAnW9w-unsplash.jpg">
             <a>spicy thing</a>
         </div>
         <div>
-            <img src="Photos\sharon-pittaway-iMdsjoiftZo-unsplash.jpg">
+            <img alt="multicolor hydrangea" src="Photos\sharon-pittaway-iMdsjoiftZo-unsplash.jpg">
             <a>special thing</a>
         </div>
     </section>
