--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<a class="screen-reader-skip" href="#section1">Skip to main content</a>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,13 +11,13 @@
     <header>
         <h1>Nathan Despain</h1>
         <nav>
-            <a class="currentPage" href="C:\Users\Nathan\Documents\Lambda\User-Interface-II\index.html">Home</a>
-            <a href="C:\Users\Nathan\Documents\Lambda\User-Interface-II\about.html">About</a>
-            <a href="C:\Users\Nathan\Documents\Lambda\User-Interface-II\contact.html">Contact</a>
-            <a href="C:\Users\Nathan\Documents\Lambda\User-Interface-II\projects.html">Projects</a>
+            <a class="currentPage" href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
+            <a href="projects.html">Projects</a>
         </nav>
     </header>
-    <section class="section1">
+    <section id="section1" class="section1">
         <img alt="Laptop with code" src="Photos\clement-h-95YRwf6CNw8-unsplash.jpg">
         <div>
             <h2>Nathan DeSpain</h2>
@@ -29,35 +30,35 @@
     <section class="gallery">
         <div>
             <img alt="Fluffy pink and blue clouds" src="Photos\annie-spratt-nWiS2rgtVts-unsplash.jpg">
-            <a>title of a</a>
+            <p>title of a</p>
         </div>
         <div>
             <img alt="Brick city home with a bicycle" src="Photos\brennan-ehrhardt-HALe2SmkWAI-unsplash.jpg">
-            <a>project</a>
+            <p>project</p>
         </div>
         <div>
             <img alt="stack of books" src="Photos\hope-house-press-leather-diary-studio-IOzk8YKDhYg-unsplash.jpg">
-            <a>might go</a>
+            <p>might go</p>
         </div>
         <div>
             <img alt="blue sky with birds"src="Photos\rowan-heuvel-e-S-Pe2EmrE-unsplash.jpg">
-            <a>right here</a>
+            <p>right here</p>
         </div>
         <div>
             <img alt="blue orange and black nebula" src="Photos\nasa-rTZW4f02zY8-unsplash.jpg">
-            <a>cool thing</a>
+            <p>cool thing</p>
         </div>
         <div>
             <img alt="astronaut untethered from ISS floating above earth" src="Photos\nasa-Yj1M5riCKk4-unsplash.jpg">
-            <a>fun thing</a>
+            <p>fun thing</p>
         </div>
         <div>
             <img alt="picture of a pool of clear water in the sun" src="Photos\ryan-wilson-YdpDztAnW9w-unsplash.jpg">
-            <a>spicy thing</a>
+            <p>spicy thing</p>
         </div>
         <div>
             <img alt="multicolor hydrangea" src="Photos\sharon-pittaway-iMdsjoiftZo-unsplash.jpg">
-            <a>special thing</a>
+            <p>special thing</p>
         </div>
     </section>
     <footer>
